# pasteofexile

./: .gitignore  Cargo.toml  Dockerfile  README.md  Trunk.toml  build.sh  docker.sh  package.json  rust-toolchain.toml  rustfmt.toml  tailwind.config.js  wrangler.dev.toml  wrangler.toml
.github/: FUNDING.yml
.github/workflows/: ci.yaml
app/: Cargo.toml  index.html  robots.txt  tailwind.css
app-web/: Cargo.toml  robots.txt
app-web/src/: main.rs
app/src/: api.rs  assets.rs  build.rs  consts.rs  context.rs  error.rs  future.rs  head.rs  lib.rs  main.rs  meta.rs  model.rs  pob.rs  progress.rs  response_context.rs  router.rs  session.rs  storage.rs  svg.rs  tree.rs  utils.rs
app/src/components/: create_paste.rs  import_pastebin.rs  login_status.rs  mod.rs  paste_history.rs  paste_toolbox.rs  pob_colored_select.rs  pob_colored_text.rs  pob_gear_preview.rs  pob_gems.rs  pob_item.rs  pob_item_set.rs  pob_tree_preview.rs  pob_tree_table.rs  poe_gems.rs  popup.rs  static_popup.rs  themetoggle.rs  tree_node.rs  view_paste.rs
app/src/pages/: index.rs  mod.rs  paste.rs  user.rs  user_edit.rs  user_paste.rs
app/src/pob/: element.rs  formatting.rs  mod.rs  summary.rs
app/src/utils/: hooks.rs  links.rs  route.rs  storage.rs
pob/: Cargo.toml
pob/benches/: parse.rs
pob/src/: config.rs  error.rs  gems.rs  items.rs  lib.rs  passives.rs  roxmltree.rs  serde.rs  stats.rs  utils.rs
pob/src/serde/: mod.rs  model.rs  pob.rs  utils.rs
pob/test/: 316_empty.xml  316_poison_occ.xml  318_skillset.xml  319_mastery_effects.xml  320_impending_doom.xml  322_overrides.xml  325_loadouts.xml
poe-data/: Cargo.toml
poe-data/data/: gems.json  gems2.json
poe-data/src/: lib.rs
poe-tree/: Cargo.toml  build.rs
poe-tree/data/: 3.28.json
poe-tree/src/: lib.rs
shared/: Cargo.toml
shared/src/: id.rs  lib.rs  model.rs  poe.rs  url.rs  user.rs  utils.rs  validation.rs
shared/src/model/: id.rs  paste.rs
snapshot/: Cargo.toml
snapshot/src/: main.rs
worker/: Cargo.toml  build.rs
worker-sentry/: Cargo.toml
worker-sentry/src/: client.rs  converter.rs  error.rs  js.rs  layer.rs  lib.rs  metrics.rs  protocol.rs  utils.rs
worker-sentry/src/protocol/: metrics.rs
worker/src/: api.rs  app.rs  assets.rs  b2.rs  bindgen.rs  cache.rs  consts.rs  crypto.rs  dangerous.rs  error.rs  layer.rs  lib.rs  net.rs  pastebin.rs  pastes.rs  poe_api.rs  request_context.rs  response.rs  retry.rs  route.rs  sentry.rs  sentry_impl.rs  stats.rs  statsd.rs  utils.rs
worker/src/sentry/: client.rs  converter.rs  layer.rs  metrics.rs  mod.rs  protocol.rs  utils.rs
worker/src/sentry/protocol/: metrics.rs
worker/src/storage/: b2.rs  b2_client.rs  kv.rs  mod.rs  pastebin.rs  r2.rs  utils.rs
