[workspace]
members = [
    "app",
    "pob",
    "shared",
    "worker"
]
exclude = ["snapshot"]

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 3 # switch back to "s" or "z" when hitting the worker limit
lto = true

[profile.release.package.app]
opt-level = 'z'

[profile.release.package.pob]
opt-level = 'z'
