[workspace]
members = [
    "app",
    "pob",
    "poe-data",
    "poe-tree",
    "shared",
    "worker",
    "worker-sentry",
]
exclude = ["snapshot"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["David Herberth <github@dav1d.de>"]
edition = "2021"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(pobbin_develop)'] }

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 3
lto = true
strip = true

[profile.release.package.app]
opt-level = 'z'

[profile.release.package.pob]
opt-level = 'z'

[workspace.dependencies]
# sycamore = { version = "0.8.2", features = ["suspense", "hydrate"] }
# sycamore-router = version = "0.8.2"
# A little bit better scroll restoration, still shitty though
sycamore = { git = "https://github.com/Dav1dde/sycamore.git", rev = "3f6320b", package = "sycamore", features = ["suspense", "hydrate"] }
sycamore-router = { git = "https://github.com/Dav1dde/sycamore.git", rev = "3f6320b", package = "sycamore-router" }

poe-api = { git = "https://github.com/Dav1dde/poe-rs/", rev = "619a8b3", default-features = false }

worker = "0.4.2"
js-sys = "0.3"
web-sys = "0.3"
# Pin to 0.2.93 because of https://github.com/rustwasm/wasm-bindgen/issues/4211
# and https://github.com/cloudflare/workers-rs/issues/658
wasm-bindgen = "=0.2.93"
wasm-bindgen-futures = "0.4"
reqwasm = { version = "0.5", default-features = false, features = ["http"] }

serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
quick-xml = "0.22"

base64 = "0.13"
percent-encoding = "2"
flate2 = "1"
encoding = "0.2"

console_error_panic_hook = "0.1"
tracing-subscriber = "0.3"
tracing-wasm = "0.2"
tracing = "0.1"

futures = "0.3"

git-version = "0.3"
cfg-if = "1"
thiserror = "1"
anyhow = "1"
strum = { version = "0.24", features = ["derive"] }
phf = "0.11"
phf_codegen = "0.11"
gloo-timers = { version = "0.3", features = ["futures"] }
thousands = "0.2"
itertools = "0.10"
url = { version = "2", features = ["serde"] }
time = "0.3"
uuid = "1"
pin-project-lite = "0.2"
once_cell = "1"
