[package]
name = "app-web"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
app = { path = "../app/" }

sycamore.workspace = true

web-sys.workspace = true

console_error_panic_hook.workspace = true
tracing-subscriber.workspace = true
tracing-wasm.workspace = true
