[package]
name = "app"
version = "0.1.0"
authors = ["David Herberth <github@dav1d.de>"]
edition = "2021"

[features]
ssr = ["sycamore/ssr", "strum"]

[dependencies]
pob = { path = "../pob/" }
shared = { path = "../shared/" }

sycamore = { version = "0.8", features = ["suspense", "hydrate"] }
sycamore-router = "0.8"

web-sys = { version = "0.3", features = [
    "Window", "HtmlDocument", "HtmlHeadElement", "HtmlTextAreaElement", "Selection",
    "CssStyleDeclaration", "PointerEvent", "HtmlSelectElement", "InputEvent"
]}
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
reqwasm = { version = "0.5", default-features = false, features = ["http"] } # TODO: this should be optional

serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.13"

tracing = "0.1"

cfg-if = "1"
thiserror = "1"
strum = { version = "0.24", features = ["derive"], optional = true }

gloo-timers = { version = "0.2.6", features = ["futures"] }
thousands = "0.2"
itertools = "0.10"


[dev-dependencies]
sycamore = { version = "0.8", features = ["ssr"] }
