[package]
name = "app"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
ssr = ["sycamore/ssr", "strum"]

[dependencies]
pob = { path = "../pob/" }
shared = { path = "../shared/" }

sycamore.workspace = true
sycamore-router.workspace = true

web-sys = { workspace = true, features = [
    "Window", "HtmlDocument", "HtmlHeadElement", "HtmlTextAreaElement", "Selection",
    "CssStyleDeclaration", "PointerEvent", "HtmlSelectElement", "InputEvent",
    "Storage", "AddEventListenerOptions",
] }
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
reqwasm.workspace = true

serde.workspace = true
serde_json.workspace = true
base64.workspace = true

tracing.workspace = true
tracing-wasm.workspace = true
tracing-subscriber.workspace = true
console_error_panic_hook.workspace = true

cfg-if.workspace = true
thiserror.workspace = true
strum = { workspace = true, optional = true }

gloo-timers.workspace = true
thousands.workspace = true
itertools.workspace = true
percent-encoding.workspace = true
