[package]
name = "pob"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
better-errors = ["serde_path_to_error"]

[dependencies]
zune-inflate.workspace = true
base64.workspace = true
serde.workspace = true
quick-xml = { workspace = true, features = ["serialize"] }
thiserror.workspace = true
encoding.workspace = true
serde_path_to_error = { workspace = true, optional = true }
