[package]
name = "pob"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
better-errors = ["serde_path_to_error"]

[dependencies]
shared = { path = "../shared/" }
flate2.workspace = true
base64.workspace = true
serde.workspace = true
quick-xml = { workspace = true, features = ["serialize"] }
thiserror.workspace = true
encoding.workspace = true
serde_path_to_error = { workspace = true, optional = true }

[dev-dependencies]
serde_path_to_error.workspace = true
