[package]
name = "poe-tree"
version = "0.1.0"
authors = ["David Herberth <github@dav1d.de>"]
edition = "2021"
build = "build.rs"

[features]
default = ["tree-3_15", "tree-3_16", "tree-3_17", "tree-3_18", "tree-3_19", "tree-3_20"]
tree-3_15 = []
tree-3_16 = []
tree-3_17 = []
tree-3_18 = []
tree-3_19 = []
tree-3_20 = []

[dependencies]
phf = "0.11"

[build-dependencies]
phf_codegen = "0.11"
anyhow = "1"
serde_json = "1"
poe-api = { git = "https://github.com/Dav1dde/poe-rs/", rev = "0f1622d", default-features = false }
