[package]
name = "poe-tree"
version.workspace = true
authors.workspace = true
edition.workspace = true
build = "build.rs"

[lints]
workspace = true

[features]
default = [
    "tree-3_15", 
    "tree-3_16", 
    "tree-3_17", 
    "tree-3_18", 
    "tree-3_19", 
    "tree-3_20", 
    "tree-3_21", 
    "tree-3_22",
    "tree-3_23",
    "tree-3_24",
    "tree-3_25",
]
tree-3_15 = []
tree-3_16 = []
tree-3_17 = []
tree-3_18 = []
tree-3_19 = []
tree-3_20 = []
tree-3_21 = []
tree-3_22 = []
tree-3_23 = []
tree-3_24 = []
tree-3_25 = []

[dependencies]
phf.workspace = true

[build-dependencies]
phf_codegen.workspace = true
anyhow.workspace = true
serde_json.workspace = true
poe-api.workspace = true
