[package]
name = "snapshot"
version = "0.1.0"
authors = ["David Herberth <github@dav1d.de>"]
edition = "2021"

[dependencies]
pob = { path = "../pob/" }
clap = { version = "3.2", features = ["derive"] }
serde = "1"
csv = "1"
zip = { version = "0.6", features = ["time"] }
time = { version = "0.3", features = ["serde", "serde-human-readable"] }
anyhow = "1"

