[package]
name = "worker-sentry"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
time = { workspace = true, features = ["formatting", "parsing"] }
tracing.workspace = true
tracing-subscriber.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
uuid.workspace = true
git-version.workspace = true
thiserror.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true
url.workspace = true
pin-project-lite.workspace = true
web-sys = { workspace = true, features = ["Crypto", "WorkerGlobalScope"] }
