[package]
name = "worker-app" # Can't use worker because it collides with worker-rs
version = "0.1.0"
authors = ["David Herberth <github@dav1d.de>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
debug = ["console_error_panic_hook"]
use-kv-storage = []

[dependencies]
app = { path = "../app", features = ["ssr"], default-features = false }
pob = { path = "../pob/", features = ["better-errors"] }
poe-tree = { path = "../poe-tree/" }
shared = { path = "../shared/" }

worker = { git = "https://github.com/Dav1dde/workers-rs.git", rev = "5a24cc5d", package = "worker" }
# worker = { path = "../../workers-rs/worker/" }

serde_json = "1"
serde = "1"

sycamore = { git = "https://github.com/sycamore-rs/sycamore.git", rev = "f1fd670", package = "sycamore", features = ["futures"] }
sycamore-router = { git = "https://github.com/sycamore-rs/sycamore.git", rev = "f1fd670", package = "sycamore-router" }

web-sys = { version = "0.3", features = ["Crypto", "SubtleCrypto", "CryptoKey", "HmacImportParams", "WorkerGlobalScope"] }
wasm-bindgen = "0.2"
js-sys = "0.3"

url = { version = "2", features = ["serde"] }
percent-encoding = "2"
base64 = "0.13"
thiserror = "1"
git-version = "0.3"
time = { version = "0.3", features = ["formatting", "parsing"] }
uuid = "1"
strum = { version = "0.24", features = ["derive"] }
pin-project-lite = "0.2"

console_error_panic_hook = { version = "0.1", optional = true }
tracing = "0.1"
tracing-subscriber = "0.3"
