[package]
name = "worker-app" # Can't use worker because it collides with worker-rs
version.workspace = true
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
pob = { path = "../pob/", features = ["better-errors"] }
sentry = { path = "../worker-sentry/", package = "worker-sentry" }
poe-data = { path = "../poe-data/" }
poe-tree = { path = "../poe-tree/" }
shared = { path = "../shared/" }

worker.workspace = true

serde_json.workspace = true
serde.workspace = true

sycamore-router.workspace = true

web-sys = { workspace = true, features = [
    "Crypto", "SubtleCrypto", "CryptoKey", "HmacImportParams",
] }
wasm-bindgen.workspace = true
js-sys.workspace = true

futures.workspace = true

url.workspace = true
percent-encoding.workspace = true
base64.workspace = true
thiserror.workspace = true
git-version.workspace = true
strum.workspace = true
pin-project-lite.workspace = true
once_cell.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
regex = "1"
